fix(frontend): wrap long task descriptions

--- a/frontend/src/app/modules/tasks/components/task-list/task-list.component.css
+++ b/frontend/src/app/modules/tasks/components/task-list/task-list.component.css
@@ -1,3 +1,8 @@
 .line-icon {
   vertical-align: middle;
 }
+
+.wrap-text {
+  width: 100vh;
+  overflow-wrap: break-word;
+}
